--- a/README.rdoc
+++ b/README.rdoc
@@ -1,4 +1,4 @@
-SlothBook is live at sloth-book.herokuapp.com.
+SlothBook is live at slothbook.herokuapp.com.
 
 Admin can edit and/or destroy users
 Email: ada@ada.com
